turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:11: error: ')' expected but ';' found.
  setCouleurBrosse(colors(rule(state)(x)(0));baisseBrosse();leveBrosse()
                                            ^Turmite:18: error: ';' expected but identifier found.
  state = rule(state)(x)(2)
  ^